--- a/src/main/webapp/css/registration.css
+++ b/src/main/webapp/css/registration.css
@@ -8,8 +8,9 @@ body {
 form {
     background-color: inherit;
     width: 300px;
-    height: 335px;
+    height: 200px;
     margin: 0 auto;
+    text-align: center;
 }
 
 h1 {
@@ -28,13 +29,6 @@ input {
     background-color: black;
     color: floralwhite;
     font-family: Arial;
-}
-
-.login-button{
-    background-color: inherit;
-    width: 100px;
-    height: 50px;
-    margin: 0 auto;
 }
 
 .login-submit {
