--- a/src/main/webapp/css/welcome.css
+++ b/src/main/webapp/css/welcome.css
@@ -5,11 +5,16 @@ body {
     background-size: 100%;
 }
 
+div {
+    height: 180px;
+    width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
 h1 {
+    height: 60px;
     color: floralwhite;
-    margin:0 auto;
-    width:600px;
-    height:200px;
     font-weight: normal;
     font-variant: normal;
     font-style: italic;
@@ -19,16 +24,11 @@ h1 {
 
 h2 {
     color: floralwhite;
-    width:400px;
-    height:100px;
     font-weight: normal;
     font-variant: normal;
     font-style: italic;
     font-size: 30px;
     font-family: Magneto;
-    position: fixed;
-    left: 760px;
-    bottom: 350px;
 }
 
 button {
@@ -44,12 +44,7 @@ button {
 }
 
 .login {
-    position: fixed;
-    left: 830px;
 }
 
 .registration {
-    position: fixed;
-    left: 830px;
-    bottom: 550px;
 }
